# android-recipes-5ed

./: LICENSE.txt  README.md
Chapter04_Source_Code/: build.gradle  gradle.properties  settings.gradle
Chapter04_Source_Code/4_01_MyLocation/: build.gradle
Chapter04_Source_Code/4_02-03_Mapper/: build.gradle
Chapter04_Source_Code/4_04_RegionMonitor/: build.gradle
Chapter05_Source/: settings.gradle
Chapter7_Code_Samples/: settings.gradle
Chapter_01_Source_Code/: README.md  build.gradle  scripts.txt  settings.gradle
Chapter_8_Source_Code/: README.md  build.gradle  settings.gradle
Chapter_8_Source_Code/8_01_NDKJNI/: CMakeLists.txt  build.gradle
Chapter_8_Source_Code/8_01_NDKJNI/src/main/: AndroidManifest.xml
Chapter_8_Source_Code/8_01_NDKJNI/src/main/c/: NativeLib.c  NativeLib.h  NativeLibAlternate.c
Chapter_8_Source_Code/8_01_NDKJNI/src/main/java/com/androidrecipes/ndkjni/: MainActivity.java  NativeLib.java
Chapter_8_Source_Code/8_01_NDKJNI/src/main/res/layout/: activity_main.xml
Chapter_8_Source_Code/8_01_NDKJNI/src/main/res/values/: strings.xml
Chapter_8_Source_Code/8_02_NativeAppGlue/: CMakeLists.txt  build.gradle
Chapter_8_Source_Code/8_02_NativeAppGlue/src/main/: AndroidManifest.xml
Chapter_8_Source_Code/8_02_NativeAppGlue/src/main/c/: activity.c
Chapter_8_Source_Code/8_02_NativeAppGlue/src/main/res/values/: strings.xml
Code_Samples_Chapter_2/: build.gradle  settings.gradle
Source_Code_Ch_6/: build.gradle  settings.gradle
Source_Code_Chapter_3/: build.gradle  local.properties  settings.gradle
(+750 files in other folders)
